Add new OutputFormat.PARQUET Update default output formats to include parquet. Update JsonResultsWriter to write JSONLines (.jsonl) files